# FFmpeg

./: README.md  settings.gradle
app/: README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/ff/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
decode/: README.md  build.gradle
decode/src/main/: AndroidManifest.xml
decode/src/main/cpp/: CMakeLists.txt  native-lib.cpp
decode/src/main/java/com/ff/decode/: DecodeUtils.java  MainActivity.java
decode/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
media_player/: README.md  build.gradle
media_player/src/main/: AndroidManifest.xml
media_player/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  MyFFmpeg.cpp  MyFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
media_player/src/main/java/com/ff/player/: MainActivity.java  MediaPlayer.java
media_player/src/main/res/layout/: activity_main.xml
video_player/: README.md  build.gradle
video_player/src/main/: AndroidManifest.xml
video_player/src/main/cpp/: CMakeLists.txt  native-lib.cpp
video_player/src/main/java/com/ff/video/: MainActivity.java  VideoPlayer.java
video_player/src/main/res/layout/: activity_main.xml
